@@ -1,3 +1,11 @@
+2014-07-15  Jason Merrill  <jason@redhat.com>
+
+	PR c++/60848
+	PR c++/61723
+	* call.c (is_std_init_list): Don't check CLASSTYPE_TEMPLATE_INFO.
+	* class.c (finish_struct): Reject invalid definition of
+	std::initializer_list.
+
 2014-07-15  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* call.c (convert_like_real): Call print_z_candidate and inform only
